--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 
     <!-- result -->
 
+    <p class="text-center text-light mt-4" id="soTienCoThe"></p>
+    <p class="text-center text-light" id="soTienPhaiTra"></p>
+
     <div class="d-flex justify-content-center">
         <div class="end w-50">
           <p
@@ -108,6 +111,8 @@
         </button>
       </div>
     </div>
+
+    
 
     <div class="reset m-4 d-flex justify-content-center">
         <button
