--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
 
       <div class="laiSuat1Nam">
-        <h4 class="text-secondary text-center mt-4">Lãi Suất Một Năm (%)</h4>
+        <h4 class="text-secondary text-center mt-4">Lãi Suất Một Tháng (%)</h4>
         <div class="d-flex justify-content-center">
           <input
             class="rounded p-2 w-50"
